2019-08-04  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* ppltotf.ch: 'This property name doesn't belong in a TYPE list'
	was never available.

2019-06-24  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* ptex-base.ch: 'Improper alphabetic or KANJI constant' error
	should be raised for multibyte CS.
	* tests/let_char_token.tex: Added.

2019-05-28  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* am/ptex.am: Add a new test.
	* pver.test: New test file for version number consistency.
	* tests/pver1.tex, ptexdir/tests/pver2.tex: New.

2019-05-06  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* ptex-base.ch:
	Make appropriate comparison of U+0100 by \if in upTeX.
	https://github.com/texjporg/tex-jp-build/issues/68
	Re-eval kcatcode of Japanese character token in \if and \ifcat.
	https://github.com/texjporg/ptex-manual/issues/4

2019-02-03  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* ptex-base.ch: Ignore newline char after Japanese control
	symbol. https://github.com/texjporg/tex-jp-build/issues/37
	* tests/control_symbol.tex: More test cases.
	* ptex_version.h: pTeX version p3.8.2.

2019-02-03  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>
	and Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* ptex-base.ch: Change the behavior of \inhibitglue. See
	  https://github.com/texjporg/tex-jp-build/issues/28.
	  - \inhibitglue becomes ineffective when it encounters a node.
	    (former commit on 2014-05-06 was still insufficient.)
	  - non-expandable tokens without node (e.g. \relax, assignment)
	    becomes transparent.
	  - \inhibitglue inside a list does not affect another list.
	  - Add new primitive \disinhibitglue to reset the inhibit glue
	    flag explicitly.
	* tests/inhibitglue.tex: Added.

2019-02-03  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* kanji.h: Use fputs2() to benefit from kanji encoding conversion.
	https://github.com/texjporg/tex-jp-build/issues/34

2019-01-23  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>